--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         </section>
         <section id="contact">
-            <div class="Container">
+            <div class="container">
                 <h2>Contato</h2>
                 <div class="contact-methods">
                     <div>
